[gd_scene load_steps=27 format=3 uid="uid://cjwv15iryj3eq"]

[ext_resource type="Texture2D" uid="uid://d1me85o8a1mk3" path="res://resources/tiles/tileset_1.png" id="1_3b4bx"]
[ext_resource type="Script" path="res://main.gd" id="1_ug8yj"]
[ext_resource type="Script" path="res://my_tile_map.gd" id="2_c3pl7"]
[ext_resource type="Texture2D" uid="uid://c0n6gq4s14nsr" path="res://resources/tiles/tile_outline.png" id="4_2v1ey"]
[ext_resource type="Script" path="res://global/my_camera.gd" id="5_qd8wv"]
[ext_resource type="PackedScene" uid="uid://bpkrnbch8qw7g" path="res://entities/units/player/player.tscn" id="6_vwtl5"]
[ext_resource type="Script" path="res://global/entity_spawner.gd" id="7_byf1u"]
[ext_resource type="Script" path="res://my_tile_map_limits.gd" id="7_rhcda"]
[ext_resource type="PackedScene" uid="uid://dao01kag4p3if" path="res://entities/units/enemies/enemy.tscn" id="8_8u1bm"]
[ext_resource type="PackedScene" uid="uid://dgtn5rvxrewky" path="res://wave_manager.tscn" id="10_6c8k2"]
[ext_resource type="PackedScene" uid="uid://oeo6wh4awiir" path="res://entities/birth/entity_birth.tscn" id="10_h026c"]
[ext_resource type="Texture2D" uid="uid://82gtppf32b5h" path="res://ui/hud/hp_bar_cover.png" id="11_qvi0d"]
[ext_resource type="Texture2D" uid="uid://d25wrqq16idrh" path="res://ui/hud/hp_bar_fill.png" id="12_craqw"]
[ext_resource type="FontFile" uid="uid://djahgvhbiwjws" path="res://resources/fonts/komika_axis/KOMIKAX_.ttf" id="13_fhpti"]
[ext_resource type="Texture2D" uid="uid://ru76f7igc031" path="res://ui/hud/overload_bar_cover.png" id="13_vwpih"]
[ext_resource type="Texture2D" uid="uid://jln4rijmrron" path="res://ui/hud/overload_bar_fill.png" id="14_1oiyy"]
[ext_resource type="Texture2D" uid="uid://b1js1c6dpad2l" path="res://ui/hud/bullet.png" id="16_sy2bd"]
[ext_resource type="Texture2D" uid="uid://hy7s3f1r8xbt" path="res://ui/hud/wave.png" id="17_wl6vj"]
[ext_resource type="Texture2D" uid="uid://c5vjkp1puo4ji" path="res://resources/control_hint_1.png" id="19_cugx8"]
[ext_resource type="Texture2D" uid="uid://buuyv4wxn0xwc" path="res://resources/control_hint_2.png" id="20_8qvy8"]

[sub_resource type="Gradient" id="Gradient_2kgl5"]
colors = PackedColorArray(0, 0, 0, 1, 1, 0.57971, 0.322434, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_omkhf"]
gradient = SubResource("Gradient_2kgl5")
width = 1920

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5fnsd"]
texture = ExtResource("1_3b4bx")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0

[sub_resource type="TileSet" id="TileSet_7p2ac"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_5fnsd")

[sub_resource type="LabelSettings" id="LabelSettings_kjgvo"]
font = ExtResource("13_fhpti")
font_size = 24
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1pqeu"]
font = ExtResource("13_fhpti")
font_size = 60
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Node"]
script = ExtResource("1_ug8yj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 7715.0
offset_top = -956.0
offset_right = 13249.0
offset_bottom = 7622.0
rotation = 1.5708
texture = SubResource("GradientTexture1D_omkhf")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_7p2ac")
format = 2
script = ExtResource("2_c3pl7")

[node name="Outline" type="NinePatchRect" parent="TileMap"]
modulate = Color(0.345098, 0.345098, 0.345098, 1)
show_behind_parent = true
offset_left = -64.0
offset_top = -64.0
offset_right = 1352.0
offset_bottom = 898.0
texture = ExtResource("4_2v1ey")
patch_margin_left = 101
patch_margin_top = 113
patch_margin_right = 118
patch_margin_bottom = 166
axis_stretch_horizontal = 2

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
script = ExtResource("5_qd8wv")

[node name="ControlHint1" type="Sprite2D" parent="."]
position = Vector2(720, 1057)
scale = Vector2(0.7, 0.7)
texture = ExtResource("19_cugx8")

[node name="ControlHint2" type="Sprite2D" parent="."]
position = Vector2(1248, 1038)
scale = Vector2(0.7, 0.7)
texture = ExtResource("20_8qvy8")

[node name="TileMapLimits" type="StaticBody2D" parent="."]
position = Vector2(-64, -64)
collision_layer = 128
collision_mask = 0
script = ExtResource("7_rhcda")

[node name="EntitySpawner" type="Node" parent="."]
script = ExtResource("7_byf1u")
player_scene = ExtResource("6_vwtl5")
enemy_secene = ExtResource("8_8u1bm")
eneity_birth_scene = ExtResource("10_h026c")

[node name="Items" type="Node2D" parent="."]

[node name="Enitties" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true

[node name="WaveManager" parent="." instance=ExtResource("10_6c8k2")]

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="MarginContainer" type="MarginContainer" parent="UI"]
custom_minimum_size = Vector2(0, 300)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 414.0
grow_horizontal = 2

[node name="LifeContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="UILifeBar" type="TextureProgressBar" parent="UI/MarginContainer/LifeContainer"]
layout_mode = 2
size_flags_horizontal = 0
value = 80.0
stretch_margin_left = 125
texture_over = ExtResource("11_qvi0d")
texture_progress = ExtResource("12_craqw")

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer/LifeContainer/UILifeBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="LifeLabel" type="Label" parent="UI/MarginContainer/LifeContainer/UILifeBar/MarginContainer"]
layout_mode = 2
text = "8 / 8"
label_settings = SubResource("LabelSettings_kjgvo")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="GoldBar" type="TextureProgressBar" parent="UI/MarginContainer/LifeContainer"]
layout_mode = 2
size_flags_horizontal = 0
value = 80.0
texture_over = ExtResource("13_vwpih")
texture_progress = ExtResource("14_1oiyy")

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer/LifeContainer/GoldBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="GoldLabel" type="Label" parent="UI/MarginContainer/LifeContainer/GoldBar/MarginContainer"]
layout_mode = 2
text = "999999999"
label_settings = SubResource("LabelSettings_kjgvo")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/LifeContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="UI/MarginContainer/LifeContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("16_sy2bd")

[node name="AmmoLabel" type="Label" parent="UI/MarginContainer/LifeContainer/HBoxContainer"]
layout_mode = 2
text = "999
"
label_settings = SubResource("LabelSettings_kjgvo")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("17_wl6vj")

[node name="WaveLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "999
"
label_settings = SubResource("LabelSettings_1pqeu")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="enemy_spawned" from="EntitySpawner" to="." method="_on_entity_spawner_enemy_spawned"]
[connection signal="player_spawned" from="EntitySpawner" to="." method="_on_entity_spawner_player_spawned"]
[connection signal="group_spawn_timing_reached" from="WaveManager" to="." method="_on_wave_manager_group_spawn_timing_reached"]
[connection signal="wave_started" from="WaveManager" to="." method="_on_wave_manager_wave_started"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
